--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
-.vscode/*.json
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 *.suo
 *.ntvs*
 *.njsproj
@@ -26,9 +29,72 @@ yarn-error.log*
 bin/*
 !bin/.gitkeep
 
+# Environment files
 .env
+.env.local
+.env.*.local
 
+# Data and wallet files (user data)
+data/
+wallets/
+*.wallet
+*.keys
+
+# Downloads
 downloads/*
 !downloads/*.sh
 
+# Auto-update files
 dev-app-update.yml
+
+# Build artifacts
+dist/
+build/
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Electron build files
+out/
+packages/
+*.dmg
+*.exe
+*.deb
+*.rpm
+*.AppImage
+*.snap
+*.tar.gz
+*.zip
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories (already covered by node_modules but being explicit)
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
