--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,24 @@ jobs:
       - name: Build Windows
         run: npm run build:win
 
+      - name: Find and list build artifacts
+        run: |
+          Write-Host "Searching for .exe files..."
+          Get-ChildItem -Path . -Recurse -Filter "*.exe" -ErrorAction SilentlyContinue | Select-Object FullName, Length | Format-Table -AutoSize
+          Write-Host "`nContents of dist directory:"
+          if (Test-Path dist) { Get-ChildItem -Path dist -Recurse -Directory | Select-Object FullName }
+          Write-Host "`nContents of dist/electron if it exists:"
+          if (Test-Path dist/electron) { Get-ChildItem -Path dist/electron -Recurse | Select-Object Name, FullName }
+        continue-on-error: true
+
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: dist/electron/*.exe
+          path: |
+            dist/electron/*.exe
+            dist/electron/**/*.exe
+          if-no-files-found: warn
           retention-days: 30
 
   build-linux:
@@ -58,6 +71,22 @@ jobs:
       - name: Build Linux
         run: npm run build:linux
 
+      - name: Find and list build artifacts
+        run: |
+          echo "Searching for AppImage and deb files..."
+          find . -name "*.AppImage" -o -name "*.deb" 2>/dev/null | head -20
+          echo "`nContents of dist directory:"
+          ls -lah dist/ 2>/dev/null || echo "dist not found"
+          if [ -d dist/electron ]; then
+            echo "`nContents of dist/electron:"
+            ls -lah dist/electron/
+            if [ -d dist/electron/Packaged ]; then
+              echo "`nContents of dist/electron/Packaged:"
+              ls -lah dist/electron/Packaged/
+            fi
+          fi
+        continue-on-error: true
+
       - name: Upload Linux artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -65,6 +94,9 @@ jobs:
           path: |
             dist/electron/*.AppImage
             dist/electron/*.deb
+            dist/electron/**/*.AppImage
+            dist/electron/**/*.deb
+          if-no-files-found: warn
           retention-days: 30
 
   create-release:
