Make release step run even if builds have warnings

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,7 @@ jobs:
     name: Create Release
     needs: [build-windows, build-linux]
     runs-on: ubuntu-latest
+    if: always()
 
     steps:
       - name: Checkout code
