--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "14.11.0"
+          node-version: "16.x"
           cache: "npm"
 
       - name: Install dependencies
@@ -43,7 +43,6 @@ jobs:
           path: |
             dist/electron/*.exe
             dist/electron/**/*.exe
-          if-no-files-found: warn
           retention-days: 30
 
   build-linux:
@@ -57,7 +56,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "14.11.0"
+          node-version: "16.x"
           cache: "npm"
 
       - name: Install dependencies
